# gyst-tui

./: .rustfmt.toml  Cargo.toml  README.md  SPECIFICATION.md  TECHNICAL_ARCHITECTURE.md
src/: app.rs  configuration.rs  main.rs  utils.rs
src/cli/: cli_utils.rs  formats.rs  ls.rs  mod.rs
src/ui/: all_tasks_page.rs  bottombar.rs  delete_task_page.rs  mod.rs  task_page.rs
