[package]
name = "gyst-tui"
version = "0.0.1"
edition = "2024"
authors = ["Banyar S. <banyar.minshin@gmail.com>, Daniel M. <dmh672@gmail.com>"]
description = "A TUI tool for personal task/project management."
repository = "https://github.com/banyar-shin/gyst-tui"
license = "MIT"

[dependencies]
tui = { package = "ratatui", version = "0.29.0" }
crossterm = "0.29"
chrono = "0.4.23"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
anyhow = "1.0.69"
itertools = "0.10.5"
unicode-width = "0.1.10"
clap = { version = "4.1.8", features = ["derive"] }
open = "4.0.0"
dirs = "4.0.0"
